--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Architect theme
-description: Architect is a theme for GitHub Pages.
+title: Pavan Kumar A
+description: Architecting not by chance, but by choice.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-architect
